--- a/ClearMyBand/Base.lproj/Main.storyboard
+++ b/ClearMyBand/Base.lproj/Main.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,38 +17,38 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="neu-bU-SLZ">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <items>
                                     <navigationItem title="Connecting..." id="zWA-P3-mmb"/>
                                 </items>
                             </navigationBar>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="ZN2-Xl-1Oz">
-                                <rect key="frame" x="325" y="27.5" width="30" height="30"/>
+                                <rect key="frame" x="270" y="27.5" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="4Nx-7u-QN1"/>
                                     <constraint firstAttribute="height" constant="30" id="5gq-gD-Czq"/>
                                 </constraints>
                             </activityIndicatorView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CaU-61-leF">
-                                <rect key="frame" x="0.0" y="64" width="375" height="523"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="404"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableViewCellIdentifier" id="23v-KU-pSu" customClass="StrapTableViewCell" customModule="ClearMyBand" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="23v-KU-pSu" id="oNX-hz-nNy">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rCT-W3-HWF">
-                                                    <rect key="frame" x="302" y="6" width="51" height="31"/>
+                                                    <rect key="frame" x="247" y="6" width="51" height="31"/>
                                                 </switch>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q3b-ad-leQ">
-                                                    <rect key="frame" x="12" y="10" width="286" height="24"/>
+                                                    <rect key="frame" x="12" y="10" width="231" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -71,54 +70,69 @@
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E4h-RA-8aM">
-                                <rect key="frame" x="117.5" y="607" width="140" height="40"/>
+                                <rect key="frame" x="186" y="482" width="126" height="40"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Glt-zy-NAj"/>
-                                    <constraint firstAttribute="width" constant="140" id="oMZ-Nr-WGI"/>
+                                    <constraint firstAttribute="width" constant="126" id="oMZ-Nr-WGI"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Clear Notifications">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="4"/>
+                                        <integer key="value" value="6"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="clearNotifications:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bY6-7d-LHQ"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iGn-aj-oMb">
-                                <rect key="frame" x="177.5" y="587" width="20" height="20"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QiI-u2-A5P">
+                                <rect key="frame" x="8" y="482" width="168" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="LTi-Mj-rOy"/>
+                                    <constraint firstAttribute="height" constant="40" id="Jdx-bc-Xz7"/>
+                                    <constraint firstAttribute="width" constant="168" id="s7h-l8-9H5"/>
                                 </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aSd-ip-NCX">
-                                <rect key="frame" x="177.5" y="647" width="20" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="20" id="SLH-2c-XSQ"/>
-                                </constraints>
-                            </view>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <state key="normal" title="Create ClearTile on Band">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="6"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="addClearTileToBand:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AKc-Ib-W5C"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6CA-HY-OJc">
+                                <rect key="frame" x="8" y="532" width="94" height="34"/>
+                                <color key="backgroundColor" red="0.86507291666666664" green="0.12624999054893127" blue="0.11422695774849613" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Remove tile"/>
+                                <connections>
+                                    <action selector="removeClearTile:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XB8-sy-EUz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="iGn-aj-oMb" firstAttribute="top" secondItem="CaU-61-leF" secondAttribute="bottom" id="5LG-rH-cv7"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="CaU-61-leF" secondAttribute="bottom" constant="80" id="5sW-ga-j06"/>
+                            <constraint firstItem="QiI-u2-A5P" firstAttribute="centerY" secondItem="E4h-RA-8aM" secondAttribute="centerY" id="1f7-Sc-whA"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="CaU-61-leF" secondAttribute="bottom" constant="100" id="5sW-ga-j06"/>
+                            <constraint firstItem="QiI-u2-A5P" firstAttribute="top" secondItem="CaU-61-leF" secondAttribute="bottom" constant="14" id="7Yz-ym-UH1"/>
                             <constraint firstItem="neu-bU-SLZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="7aX-84-Ddm"/>
                             <constraint firstItem="CaU-61-leF" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="FeD-DL-vvv"/>
-                            <constraint firstItem="aSd-ip-NCX" firstAttribute="centerX" secondItem="iGn-aj-oMb" secondAttribute="centerX" id="Gxa-ik-rmy"/>
-                            <constraint firstItem="E4h-RA-8aM" firstAttribute="centerX" secondItem="CaU-61-leF" secondAttribute="centerX" id="ODO-h4-906"/>
-                            <constraint firstItem="aSd-ip-NCX" firstAttribute="top" secondItem="E4h-RA-8aM" secondAttribute="bottom" id="QnZ-E3-zIq"/>
+                            <constraint firstItem="6CA-HY-OJc" firstAttribute="leading" secondItem="QiI-u2-A5P" secondAttribute="leading" id="SDc-F3-KI5"/>
                             <constraint firstItem="CaU-61-leF" firstAttribute="top" secondItem="neu-bU-SLZ" secondAttribute="bottom" id="TD4-k1-6XP"/>
                             <constraint firstAttribute="trailing" secondItem="CaU-61-leF" secondAttribute="trailing" id="U2J-2H-yxE"/>
-                            <constraint firstItem="aSd-ip-NCX" firstAttribute="height" secondItem="iGn-aj-oMb" secondAttribute="height" id="eNP-hu-SsT"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="aSd-ip-NCX" secondAttribute="bottom" id="hrQ-s9-MnH"/>
+                            <constraint firstItem="QiI-u2-A5P" firstAttribute="bottom" secondItem="6CA-HY-OJc" secondAttribute="top" constant="-10" id="c1B-kh-Ara"/>
+                            <constraint firstItem="QiI-u2-A5P" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="8" id="eT5-t3-KcO"/>
                             <constraint firstItem="neu-bU-SLZ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="lrZ-HB-aXp"/>
-                            <constraint firstItem="iGn-aj-oMb" firstAttribute="centerX" secondItem="CaU-61-leF" secondAttribute="centerX" id="n4F-n6-v00"/>
+                            <constraint firstAttribute="trailing" secondItem="E4h-RA-8aM" secondAttribute="trailing" constant="8" id="okf-Aj-67h"/>
                             <constraint firstAttribute="trailing" secondItem="neu-bU-SLZ" secondAttribute="trailing" id="qW8-la-P7H"/>
-                            <constraint firstItem="E4h-RA-8aM" firstAttribute="top" secondItem="iGn-aj-oMb" secondAttribute="bottom" id="qZw-Ur-dqE"/>
                             <constraint firstItem="ZN2-Xl-1Oz" firstAttribute="centerY" secondItem="neu-bU-SLZ" secondAttribute="centerY" id="sT2-16-7ou"/>
                             <constraint firstItem="ZN2-Xl-1Oz" firstAttribute="trailing" secondItem="neu-bU-SLZ" secondAttribute="trailing" constant="-20" id="vI8-nl-Lrv"/>
                             <constraint firstItem="neu-bU-SLZ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="vSF-5e-e7v"/>
